# stopwatch_3min

./: Cargo.toml  build.rs  esp32_m5stack_core2.rs  main.rs
.cargo/: config.toml
ui/: stopwatch_3min.slint
