# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "stopwatch_3min"
version = "1.0.0"
authors = ["Tasuku Suzuki <stasuku@gmail.com>"]
edition = "2021"
build = "build.rs"
publish = false
license = "MIT"

[[bin]]
path = "main.rs"
name = "stopwatch_3min"

[features]
simulator = ["slint/renderer-software", "slint/backend-winit", "slint/std"]
default = []

[dependencies]
esp-alloc = { version = "0.3" }
xtensa-lx-rt = { version = "0.16", features = ["esp32"] }
display-interface = { version = "0.4.1" }
display-interface-spi = { version = "0.4" }
esp32-hal = { version = "0.16" }
esp-println = { version = "0.7.0", features = ["esp32"] }
esp-backtrace = { version = "0.9.0", features = ["panic-handler", "print-uart", "esp32"] }
ft6x36 = { version = "0.4.0" }
axp192 = { version = "0.1.1" }
critical-section = { version = "1.1.2" }
dummy-pin = { version = "0.1.1" }
slint = { version = "1.3.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"] }
mipidsi = { version = "0.7.1" }
embedded-graphics-core =  { version = "0.4" }
shared-bus = { version = "0.3" }
embedded-hal = "0.2.7"

[build-dependencies]
slint-build = "1.3.0"

